--- a/views/user/pu_result.pug
+++ b/views/user/pu_result.pug
@@ -11,7 +11,7 @@ block content
     .container 
         .row 
             .col-md-6 
-                p Total votes from polling units under <strong>#{user.agentData.ward}</strong> ward
+                p Total votes from polling units under <strong></strong> ward
             .col-md-6.text-end 
                 strong Total Accredited Votes: 
                 | #{puResults.total_accredited_voters}
