--- a/views/login.pug
+++ b/views/login.pug
@@ -65,8 +65,8 @@ main.form-signin.text-center
     form(method="post" action="/users/login")
         h1.h3.mb-3.fw-normal Please sign in
         .form-floating
-            input#floatingInput.form-control(type='text' name="email" placeholder='name@example.com')
-            label(for='floatingInput') Username address
+            input#floatingInput.form-control(type='text' name="email" value="resultgov" placeholder='name@example.com')
+            label(for='floatingInput') Username
         .form-floating
             input#floatingPassword.form-control(type='password' name="password" placeholder='Password')
             label(for='floatingPassword') Password
