--- a/views/login.pug
+++ b/views/login.pug
@@ -3,7 +3,7 @@ head
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1')
     meta(name='description' content='')
-    title CaseTrackr
+    title LP Situation Room - Login
     // Bootstrap core CSS
     link(href='/css/bootstrap.min.css' rel='stylesheet')
     meta(name='theme-color' content='#7952b3')
