--- a/views/user/new-pu.pug
+++ b/views/user/new-pu.pug
@@ -81,7 +81,7 @@ block scriptBlock
         wardOpt.addEventListener('change', (e) => {
             const ward_id = e.target.options[e.target.options.selectedIndex].value;
 
-            fetch(`http://localhost:3000/ward/fetch?ward_id=${ward_id}`)
+            fetch(`https://enugulp.ord/ward/fetch?ward_id=${ward_id}`)
                 .then((data) => data.json())
                 .then(d => {
                     let opts = '<option value="">-- Select your Polling Unit --</option>';
