--- a/views/user/pu_result.pug
+++ b/views/user/pu_result.pug
@@ -9,9 +9,24 @@ block styleBlock
 
 block content 
     .container 
+        .mb-3  
+            form(method="get" action="/pu/results")
+                .row
+                    .col-md-5
+                        label Local Governments
+                        select.form-control#lg-id(name="lg_id" required)
+                            option(value="")| -- Select Local govt --
+                                each lg in lgs
+                                    option(value=`${lg.id}`)= lg.name
+                    .col-md-5
+                        label Wards
+                        select.form-control#ward-id(name="ward_id" required)
+                            option(value="")| -- Select Ward --
+                    .col-md-2.d-grid 
+                        br/
+                        input.btn.btn-success(type="submit" value="View Result")
         .row 
             .col-md-6 
-                p Total votes from polling units under <strong></strong> ward
             .col-md-6.text-end 
                 strong Total Accredited Votes: 
                 | #{puResults.total_accredited_voters}
@@ -51,18 +66,22 @@ block content
                             td 684
                             td 
 
-block scriptBlock 
-    script.  
-        function deleteCase(id, el) {
-            if (confirm("Are you sure you want to delete this case")) {
-                fetch('/admin/delete-case/' + id, {
-                    method: 'DELETE'
-                })
-                .then(res => res.json())
-                .then(res => {
-                    if (res.status === true) {
-                        el.closest('tr').remove();
+block scriptBlock
+    script.
+
+        const lgOpt = document.getElementById("lg-id");
+        lgOpt.addEventListener('change', (e) => {
+            const lg_id = e.target.options[e.target.options.selectedIndex].value;
+
+            fetch(`https://enugulp.org/ward/fetch-wards?lg_id=${lg_id}`)
+                .then((data) => data.json())
+                .then(d => {
+                    let opts = '<option value="">-- Select ward --</option>';
+                    if (d.status.trim() == 'true') {
+                        d.data.forEach(ward => {
+                            opts += `<option value='${ward.id}'>${ward.name}</option>`;
+                        });
+                        document.getElementById("ward-id").innerHTML = opts;
                     }
                 });
-            }
-        }                            
+        });
