--- a/views/user/layout.pug
+++ b/views/user/layout.pug
@@ -17,7 +17,7 @@ head
 
 body
     .container
-        header.d-flex.flex-wrap.align-items-center.justify-content-center.justify-content-md-between.py-3.mb-4.border-bottom
+        header.d-flex.flex-wrap.align-items-center.justfy-content-center.justfy-content-md-between.py-3.mb-4.border-bottom
             //- a.d-flex.align-items-center.col-md-3.mb-2.mb-md-0.text-dark.text-decoration-none(href='/') Home
             if admin
                 ul.nav.col-12.col-md-auto.mb-2.justify-content-center.mb-md-0
@@ -26,19 +26,20 @@ body
                     li
                         a.nav-link.px-2.link-dark(href='/users') Agents
 
-            if admin  
-                h4 Admin
-            else if user && user.role == 'lg'
-                h4 #{agentData.lg.name}
-            else if user && user.role == 'ward'
-                h4 Ward Result
-            else if user && user.role == 'pu'
-                h4 #{agentData.lg.name} - LG
-            else 
-                h4 LP Situation Room
+            .col-9
+                if admin  
+                    h4 Admin
+                else if user && user.role == 'lg'
+                    h4 #{agentData.lg.name}
+                else if user && user.role == 'ward'
+                    h4 Ward Result
+                else if user && user.role == 'pu'
+                    h4 #{agentData.lg.name} - LG
+                else 
+                    h4 LP Situation Room
 
 
-            .col-md-3.text-end
+            .col-3.text-end
                 a.btn.btn-outline-primary.me-2(href="/users/logout") Logout
 
     block content
