Show result sheet, validate inputs

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -28,7 +28,7 @@ body
                         .d-flex
                             ul.list-unstyled.social.me-auto
                                 li
-                                    a(href='#')
+                                    a(href='https://twitter.com/en_gubernatoral')
                                         i.fa.fa-twitter
                                 li
                                     a(href='#')
@@ -50,7 +50,7 @@ body
                                 a(href='#')
                                     span.fa.fa-facebook
                             li
-                                a(href='#')
+                                a(href='https://twitter.com/en_gubernatoral')
                                     span.fa.fa-twitter
                     .widget
                         p
