--- a/views/user/pu_result.pug
+++ b/views/user/pu_result.pug
@@ -54,7 +54,7 @@ block content
                                 td= pu.vote.apga
                                 td= pu.vote.lp 
                                 td= pu.vote.pdp
-                                td 
+                                td= pu.vote.others 
                                 td
                                     a.result(href='' data-bs-toggle="modal" data-bs-target="#resultModal" data-result=`/${pu.result_sheet}`) View
                                 td
@@ -66,7 +66,7 @@ block content
                             td= puResults.parties.apga
                             td= puResults.parties.lp
                             td= puResults.parties.pdp
-                            td 684
+                            td= puResults.parties.others
                             td 
                             td
 
